--- a/components/navBar/Navbar.module.css
+++ b/components/navBar/Navbar.module.css
@@ -1,13 +1,31 @@
-
+/* 
+.input_group{
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    width: 100%;
+} */
 
 .header_login ul li {
     display: inline-block;
     line-height: 1.5;
-    padding: 0 10px;
+    padding: 10 10px;
 }
-.navbar ul li{
+.nav ul{
+    list-style: none;
+    overflow: hidden;
+    text-align: right;
+    float: right;
+}
+
+
+.nav ul li{
     display: inline-block;
     line-height: 1.5;
+    padding: 5px;
 }
 
 
@@ -16,11 +34,11 @@
     position: fixed;
     top: 0px;
     height: 50px;
-    z-index: 999;
+    z-index: 111;
     width: 100%;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
-    /* opacity: 0; */
+    /* / opacity: 0; / */
 }
 .sticky {
     background-color: #fff;
@@ -53,7 +71,7 @@
     padding-bottom: 0;
 }
 
-/* .navbar_header{display: inline-block} */
+/* / .navbar_header{display: inline-block} / */
 .sticky-navbar .navbar-form{margin:0;}
 
 @media (max-width: 768px){
@@ -62,19 +80,19 @@
         display: inline-block;
     }
     .header_login>li>a {
-        /* color: white; */
+        /* / color: white; / */
         font-size: 15px;
         text-decoration: none;
     }
 }
 
 .navTglr_stickyBar{
-        background-color: #3982D8;
-        padding: 10px 20px 17px 20px;
-        border: 0;
-        max-height: 60px;
-        /* margin: -4px 16px -4px -16px; */
-        margin: 0px 17px -8px -29px
+    background-color: #3982D8;
+    padding: 10px 20px 15px 20px;
+    border: 0;
+    max-height: 60px;
+    margin: -1px 17px -2px -30px;
+
  }
  .navTglr_stickyBar .fa{
     color:#fff;
@@ -98,7 +116,7 @@
 .header_login li a{
     color: #333333;
     font-size: 15px;
-    /* padding: 12px; */
+    /* / padding: 12px; / */
     text-decoration: none;
 }
 .header_login li a:hover{
@@ -118,78 +136,78 @@
     padding: 5px 0;
 }
 .sticky_navbar .navbar_form{margin:0;}
- 
+/*  
  .navbar_form{
     display:flex;
     flex-grow: 1;
     width: 55%;
     padding:5px 10px 5px 10px;
     margin: 5px 0px;
-    max-height: 75px;
-}
+    max-height: 75px; */
+/* } */
 #dvcMbl .hdrRgt .navbar_form{
     width:100%
 }
-.input_group.stickey_searchbox .form-control{
+.stickey_searchbox .form_control{
     height: 35px;
     color: #858585;
     background: transparent;
     border: 1px solid #aa9b9b;
     border-radius: 8px 0px 0px 8px;
     border-right: none;
+    flex: 1;
 }
-.input_group.stickey_searchbox .btn.input_group-addon{
+.input_group_addon{
     background: transparent;
     border: none;
     border-left: 10px;
     padding: 5px 8px 0px;
     border: 1px solid #aa9b9b;
-    /* width: 50px; */
+    /* / width: 50px; / */
     border-radius: 0px 8px 8px 0px;
     border-left: none;
 }
-.input_group.stickey_
-searchbox .btn.input_group-addon i{
+.input_group_addon i{
     color: #3982D8;
     font-size: 21px;
 }
-.input_group.ee_input{
+.ee_input{
     color: #ffffff;
     font-weight: 300;
     font-size: 50px;
     width: 55%;
     margin: auto;
 }
-.input_group.ee_input input{
+.ee_input input{
     min-height: 60px;
 }
-.input_group.ee_input span {
+.ee_input span {
     color: white;
     cursor: pointer;
     background: transparent;
 }
-.input_group.ee_input .form_control:focus {
+.ee_input .form_control:focus {
     color: white;
 }
-.input_group.ee_input .form_control:focus {
+.ee_input .form_control:focus {
     border-color: #ccc;
 }
 
 
-.input_group.ee_input span i{
+.ee_input span i{
     font-size: 35px;
 }
-.input_group.stickey_searchbox .btn.input_group_addon{
+.input_group_addon{
     background: transparent;
     border: none;
     border-left: 10px;
     padding: 5px 8px 0px;
     border: 1px solid #aa9b9b;
-    /* width: 50px; */
+    /* / width: 50px; / */
     border-radius: 0px 8px 8px 0px;
     border-left: none;
 }
-.input_group.stickey_searchbox .btn.input_group_addon i{
+.input_group_addon i{
     color: #3982D8;
     font-size: 21px;
 }
@@ -199,7 +217,7 @@ searchbox .btn.input_group-addon i{
     display:
     inline-block;
     line-height: '1.5;'
-    /* border-right: 1px solid #3982D8; */
+    /* / border-right: 1px solid #3982D8; / */
 }
 .top_phone i{
     margin-right: 5px;
@@ -279,7 +297,7 @@ searchbox .btn.input_group-addon i{
 
 
 @media (max-width: 920px){
-  .navbar-header {
+  .navbar_header {
     max-width: 30%;
 
 }
@@ -288,7 +306,7 @@ searchbox .btn.input_group-addon i{
     display: flex;
     position: relative;
     width: 20%;
-    top:-60px;
+    top:0px;
     left: 25px;
     margin-left: -16px;
 }
@@ -300,3 +318,6 @@ searchbox .btn.input_group-addon i{
     border-radius: 8px 0px 0px 8px;
     border-right: none;
 }
+
+
+
