--- a/components/BestSeller/BestSeller.module.css
+++ b/components/BestSeller/BestSeller.module.css
@@ -54,4 +54,22 @@
         padding:1px;
     }
 }
+@media (max-width: 480px){
+    .photo img {
+         height: 180px;
+     }
+ 
+     .prodItm{
+         /* box-shadow: inset 0px 0px 8px #ccc;  */
+         /* width: 250px; */
+         width:50%;
+         padding: 5px;
+         float: left;
+         background: transparent;
+     }
+     
+      .prodItm {
+     width: 50%;
+              }
+ }
 
