--- a/components/LoginModal/LoginModal.module.css
+++ b/components/LoginModal/LoginModal.module.css
@@ -123,16 +123,23 @@
     right: 0;
     bottom: 0;
     display: block;
-    z-index: 3;
+   
     text-decoration: none;
 }
 
-.login{
-    z-index: 999;
-    width: 400px;
-    text-align: center;
-    position: relative;
-    margin: .5rem;
-    margin: 0 auto;
-    top: 200px;
+@media (max-width: 768px){
+     .modal_dialog {
+        margin-top: 50px;
+    }
+ }
+ @media (min-width:1025px) {
+    .modal_dialog{
+      max-width:400px;
+    }
+}
+@media (min-width: 576px){
+     .modal_dialog {
+        max-width: 400px;
+        margin: 1.75rem auto;
+    }
 }
