--- a/components/cartModal/cartModal.module.css
+++ b/components/cartModal/cartModal.module.css
@@ -8,8 +8,8 @@
    .modal_dialog {
         max-width: 400px;
         margin: 1.75rem auto;
-        max-width: 400px;
-        margin-top: 250px;
+        
+        /* margin-top: 250px; */
     }
 }
 
